# CudaIntegral

./: CMakeLists.txt  README.md  compare.cpp  cpu_methods.cpp  cpu_methods.h  cuda_methods.cu  cuda_methods.h
